Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json
@@ -24,7 +24,7 @@
   "pli-tv-bu-vb-ss13:1.3.1": "Just then a monk who had completed the rainy-season residence in Kāsī was on his way to visit the Buddha at Sāvatthī when he arrived at Kīṭāgiri. ",
   "pli-tv-bu-vb-ss13:1.3.2": "In the morning he robed up, took his bowl and robe, and entered Kīṭāgiri to collect almsfood. ",
   "pli-tv-bu-vb-ss13:1.3.3": "He was pleasing in his conduct: in going out and coming back, in looking ahead and looking aside, in bending and stretching his arms. His eyes were lowered, and he was perfect in deportment. ",
-  "pli-tv-bu-vb-ss13:1.3.4": "When people saw him, they said, “Whoʼs this, acting like a moron and always frowning? Who will give almsfood to him? Almsfood should instead be given to our Venerables Assaji and Punabbasuka, for they are gentle, congenial, pleasant to speak with, greeting one with a smile, welcoming, friendly, open, the first to speak.” ",
+  "pli-tv-bu-vb-ss13:1.3.4": "When people saw him, they said, “Whoʼs this, acting like a moron and always frowning? Whoʼs gonna give almsfood to him? Almsfood should be given to our Venerables Assaji and Punabbasuka, for they are gentle, congenial, pleasant to speak with, greeting one with a smile, welcoming, friendly, open, the first to speak.” ",
   "pli-tv-bu-vb-ss13:1.3.5": "A certain lay follower saw that monk walking for alms in Kīṭāgiri. ",
   "pli-tv-bu-vb-ss13:1.3.6": "He approached him, bowed, and said, “Venerable, have you received any almsfood?” ",
   "pli-tv-bu-vb-ss13:1.3.7": "“No, I haven’t.” ",
