--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json
@@ -63,7 +63,7 @@
   "pli-tv-bu-vb-ss13:1.6.22": "",
   "pli-tv-bu-vb-ss13:1.6.23": "This will affect people’s confidence …” ",
   "pli-tv-bu-vb-ss13:1.6.24": "He then gave a teaching and addressed Sāriputta and Moggallāna: ",
-  "pli-tv-bu-vb-ss13:1.6.25": "“Sāriputta, the two of you should go and do a legal procedure of banishing the monks Assaji and Punabbasuka from Kīṭāgiri. They are your students.” ",
+  "pli-tv-bu-vb-ss13:1.6.25": "“Go to Kīṭāgiri and do a legal procedure of banishing the monks Assaji and Punabbasuka. They’re your students.” ",
   "pli-tv-bu-vb-ss13:1.6.26": "“Sir, how can we do a procedure of banishing these monks from Kīṭāgiri? They are temperamental and harsh.” ",
   "pli-tv-bu-vb-ss13:1.6.27": "“Well, take many monks.” ",
   "pli-tv-bu-vb-ss13:1.6.28": "“Yes.” ",
