Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json
@@ -66,7 +66,7 @@
   "pli-tv-bu-vb-ss13:1.6.25": "“Go to Kīṭāgiri and do a legal procedure of banishing the monks Assaji and Punabbasuka. They’re your students.” ",
   "pli-tv-bu-vb-ss13:1.6.26": "“Sir, how can we do a procedure of banishing these monks from Kīṭāgiri? They’re temperamental and harsh.” ",
   "pli-tv-bu-vb-ss13:1.6.27": "“Well then, take many monks.” ",
-  "pli-tv-bu-vb-ss13:1.6.28": "“Yes.” ",
+  "pli-tv-bu-vb-ss13:1.6.28": "“Alright.” ",
   "pli-tv-bu-vb-ss13:1.7.1": "“And, monks, this is how it should be done. ",
   "pli-tv-bu-vb-ss13:1.7.2": "First you should accuse the monks Assaji and Punabbasuka. ",
   "pli-tv-bu-vb-ss13:1.7.3": "They should then be reminded of what they have done, before they are charged with an offense. ",
