Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -227,7 +227,7 @@
   "ja-name:226.ja203": "Liebe zu den Schlangenfamilien ",
   "ja-name:227.ja204": "Die Krähe Viraka ",
   "ja-name:228.ja205": "Der Fisch aus dem Ganges ",
-  "ja-name:229.ja206": "Die Antilope ",
+  "ja-name:229.ja206": "Die Gazelle ",
   "ja-name:230.ja207": "Wie die Königin einen Wurm mehr liebte als den König Assaka ",
   "ja-name:231.ja208": "Das Krokodil ",
   "ja-name:232.ja209": "Das alte Huhn ",
