--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -6,5 +6,6 @@
   "dhp167:2": "one should not live negligently,",
   "dhp167:3": "one should not participate in wrong view,",
   "dhp167:4": "one should not increase worldliness.",
-  "dhp168:1": "One should not neglect exertion,"
+  "dhp168:1": "One should not neglect exertion,",
+  "dhp168:2": "one should live the Dhamma well;"
 }
