Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -8,5 +8,6 @@
   "dhp167:4": "one should not increase worldliness.",
   "dhp168:1": "One should not neglect exertion,",
   "dhp168:2": "one should live the Dhamma well;",
-  "dhp168:3": "one who lives the Dhamma rests happily,"
+  "dhp168:3": "one who lives the Dhamma rests happily,",
+  "dhp168:4": "in this world and the next."
 }
