--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -9,5 +9,6 @@
   "dhp168:1": "One should apply effort, one should not be negligent,",
   "dhp168:2": "one should practice Dhamma well;",
   "dhp168:3": "one who practices the Dhamma rests happily,",
-  "dhp168:4": "in this world and the next."
+  "dhp168:4": "in this world and the next.",
+  "dhp169:1": "One should practice Dhamma well;"
 }
