Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -10,5 +10,6 @@
   "dhp168:2": "one should practice Dhamma well;",
   "dhp168:3": "one who practices the Dhamma rests happily,",
   "dhp168:4": "in this world and the next.",
-  "dhp169:1": "One should practice Dhamma well;"
+  "dhp169:1": "One should practice Dhamma well;",
+  "dhp169:2": "one should not engage in misconduct."
 }
