Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -12,5 +12,6 @@
   "dhp168:4": "in this world and the next.",
   "dhp169:1": "One should practice Dhamma well;",
   "dhp169:2": "one should not engage in misconduct.",
-  "dhp169:3": "One who practices the Dhamma rests happily,"
+  "dhp169:3": "One who practices the Dhamma rests happily,",
+  "dhp169:4": "in this world and the next."
 }
