--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -14,5 +14,6 @@
   "dhp169:2": "one should not engage in misconduct.",
   "dhp169:3": "One who practices the Dhamma rests happily,",
   "dhp169:4": "in this world and the next.",
-  "dhp170:1": "Like seeing a bubble,"
+  "dhp170:1": "Like seeing a bubble,",
+  "dhp170:2": "like seeing a mirage;"
 }
