Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -15,5 +15,5 @@
   "dhp169:3": "One who practices the Dhamma rests happily,",
   "dhp169:4": "in this world and the next.",
   "dhp170:1": "Like seeing a bubble,",
-  "dhp170:2": "like seeing a mirage;"
+  "dhp170:2": "like seeing a mirage -"
 }
