Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -16,6 +16,6 @@
   "dhp169:4": "in this world and the next.",
   "dhp170:1": "Like seeing a bubble,",
   "dhp170:2": "like seeing a mirage -",
-  "dhp170:3": "this is the way to view the world,",
+  "dhp170:3": "regarding the world in this way,",
   "dhp170:4": "which the Lord of Death does not see."
 }
