Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -16,6 +16,6 @@
   "dhp169:4": "in this world and the next.",
   "dhp170:1": "Like seeing a bubble,",
   "dhp170:2": "like seeing a mirage -",
-  "dhp170:3": "One who regards the world in this way,",
+  "dhp170:3": "one who regards the world in this way",
   "dhp170:4": "is not seen by the Lord of Death."
 }
