Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -17,5 +17,6 @@
   "dhp170:1": "Like seeing a bubble,",
   "dhp170:2": "like seeing a mirage -",
   "dhp170:3": "one who regards the world in this way",
-  "dhp170:4": "is not seen by the Lord of Death."
+  "dhp170:4": "is not seen by the Lord of Death.",
+  "dhp171:1": "Come, look at this world,"
 }
