--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -11,7 +11,7 @@
   "dhp168:3": "one who practices the Dhamma rests happily,",
   "dhp168:4": "in this world and the next.",
   "dhp169:1": "One should practice Dhamma well,",
-  "dhp169:2": "one should not engage in misconduct.",
+  "dhp169:2": "one should not engage in misconduct;",
   "dhp169:3": "One who practices the Dhamma rests happily,",
   "dhp169:4": "in this world and the next.",
   "dhp170:1": "Like seeing a bubble,",
