--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -18,7 +18,7 @@
   "dhp170:2": "like seeing a mirage -",
   "dhp170:3": "one who regards the world in this way",
   "dhp170:4": "is not seen by the Lord of Death.",
-  "dhp171:1": "Come, look at this world,",
+  "dhp171:1": "Come, look at this world -",
   "dhp171:2": "as splendid as a royal chariot,",
   "dhp171:3": "where fools sink,",
   "dhp171:4": "but discerning people are not stuck."
