--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -21,5 +21,5 @@
   "dhp171:1": "Come, look at this world,",
   "dhp171:2": "as splendid as a royal chariot,",
   "dhp171:3": "where fools sink,",
-  "dhp171:4": "but the conscious are not stuck."
+  "dhp171:4": "but there is no adherence for those who are conscious."
 }
