Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -21,5 +21,5 @@
   "dhp171:1": "Come, look at this world,",
   "dhp171:2": "as splendid as a royal chariot,",
   "dhp171:3": "where fools sink,",
-  "dhp171:4": "but where one who is conscious does not stick."
+  "dhp171:4": "but the conscious do not stick."
 }
