--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -22,5 +22,6 @@
   "dhp171:2": "as splendid as a royal chariot,",
   "dhp171:3": "where fools become immersed,",
   "dhp171:4": "but the conscious do not stick.",
-  "dhp172:1": "One who previously was negligent"
+  "dhp172:1": "One who previously was negligent",
+  "dhp172:2": "but now is not"
 }
