Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -23,5 +23,6 @@
   "dhp171:3": "where fools become immersed,",
   "dhp171:4": "but the conscious do not stick.",
   "dhp172:1": "One who previously was negligent",
-  "dhp172:2": "but now is not"
+  "dhp172:2": "but now is not",
+  "dhp172:3": "illuminates this world"
 }
