Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -25,5 +25,5 @@
   "dhp172:1": "One who previously was negligent",
   "dhp172:2": "but now is not",
   "dhp172:3": "illuminates this world",
-  "dhp172:4": "like the moon set free from clouds."
+  "dhp172:4": "like the moon set free from a cloud."
 }
