--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -26,5 +26,6 @@
   "dhp172:2": "but now is not",
   "dhp172:3": "illuminates this world",
   "dhp172:4": "like the moon set free from a cloud.",
-  "dhp173:1": "One who had done an evil deed"
+  "dhp173:1": "One who had done an evil deed",
+  "dhp173:2": "but then obscured it with the wholesome"
 }
