--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -27,5 +27,5 @@
   "dhp172:3": "illuminates this world",
   "dhp172:4": "like the moon set free from a cloud.",
   "dhp173:1": "One who had done an evil deed",
-  "dhp173:2": "but then replaced it with the wholesome"
+  "dhp173:2": "but replaces it with wholesome deeds"
 }
