--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -28,5 +28,6 @@
   "dhp172:4": "like the moon set free from a cloud.",
   "dhp173:1": "One who replaces their evil deeds",
   "dhp173:2": "with wholesome ones",
-  "dhp173:3": "illuminates this world"
+  "dhp173:3": "illuminates this world",
+  "dhp173:4": "like the moon set free from a cloud."
 }
