Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -29,5 +29,6 @@
   "dhp173:1": "One who replaces their evil deeds",
   "dhp173:2": "with wholesome ones",
   "dhp173:3": "illuminates this world",
-  "dhp173:4": "like the moon set free from a cloud."
+  "dhp173:4": "like the moon set free from a cloud.",
+  "dhp174:1": "This world has become blind;"
 }
