Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -30,5 +30,6 @@
   "dhp173:2": "with wholesome ones",
   "dhp173:3": "illuminates this world",
   "dhp173:4": "like the moon set free from a cloud.",
-  "dhp174:1": "This world has become blind;"
+  "dhp174:1": "This world has become blind;",
+  "dhp174:2": "rare are those who see clearly;"
 }
