--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -31,5 +31,6 @@
   "dhp173:3": "illuminates this world",
   "dhp173:4": "like the moon set free from a cloud.",
   "dhp174:1": "This world has become blind;",
-  "dhp174:2": "rare are those who see clearly."
+  "dhp174:2": "rare are those who see clearly.",
+  "dhp174:3": "Like a bird freed from a net,"
 }
