Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -33,5 +33,6 @@
   "dhp174:1": "This world has become blind;",
   "dhp174:2": "rare are those who see clearly.",
   "dhp174:3": "Like a bird freed from a net,",
-  "dhp174:4": "few go to heaven."
+  "dhp174:4": "few go to heaven.",
+  "dhp175:1": "Like swans moving through the air,"
 }
