--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -34,5 +34,6 @@
   "dhp174:2": "rare are those who see clearly.",
   "dhp174:3": "Like a bird freed from a net,",
   "dhp174:4": "few go to heaven.",
-  "dhp175:1": "Like swans moving through the air,"
+  "dhp175:1": "Like swans moving through the air,",
+  "dhp175:2": "like mystics moving through the sky,"
 }
