Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -230,7 +230,7 @@
   "ja-name:229.ja206": "Die Gazelle ",
   "ja-name:230.ja207": "Wie die Königin einen Wurm mehr liebte als den König Assaka ",
   "ja-name:231.ja208": "Das Krokodil ",
-  "ja-name:232.ja209": "Das alte Huhn ",
+  "ja-name:232.ja209": "Der alte Vogel ",
   "ja-name:233.ja210": "Der Specht mit Namen Knollenfresser ",
   "ja-name:234.ja-biranathambhavagga": "Das Kapitel mit den Grasbüscheln ",
   "ja-name:235.ja211": "Somadatta der Sohn des Bauern ",
