Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -8,5 +8,6 @@
   "mn4:2.3": "“હે મિત્ર ગૌતમ, જે આ કુળપુત્રો આપ ગૌતમના નામે શ્રદ્ધાપૂર્વક ઘરવાળાથી બેઘર થઇને સંન્યાસી થયા છે, તેમના આપ ગૌતમ અગ્રણી છો, મદદકાર છો, પ્રોત્સાહન આપનાર છો;",
   "mn4:2.4": "અને એ લોકો આપ ગૌતમનું ઉદાહરણ અનુસરે છે”.",
   "mn4:2.5": "“એવું જ છે, બ્રાહ્મણ, એવું જ છે, બ્રાહ્મણ!",
-  "mn4:2.6": "જે કુળપુત્રો મારા નામે શ્રદ્ધાપૂર્વક ઘરવાળાથી બેઘર થઇને સંન્યાસી થયા છે, તેમનો હું અગ્રણી છું, મદદકાર છું, પ્રોત્સાહન આપનાર છું;"
+  "mn4:2.6": "જે કુળપુત્રો મારા નામે શ્રદ્ધાપૂર્વક ઘરવાળાથી બેઘર થઇને સંન્યાસી થયા છે, તેમનો હું અગ્રણી છું, મદદકાર છું, પ્રોત્સાહન આપનાર છું;",
+  "mn4:2.7": "અને એ લોકો મારું ઉદાહરણ અનુસરે છે”."
 }
