Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -11,5 +11,6 @@
   "mn4:2.6": "જે કુળપુત્રો મારા નામે શ્રદ્ધાપૂર્વક ઘરવાળાથી બેઘર થઇને સંન્યાસી થયા છે, તેમનો હું અગ્રણી છું, મદદકાર છું, પ્રોત્સાહન આપનાર છું;",
   "mn4:2.7": "અને એ લોકો મારું ઉદાહરણ અનુસરે છે”.",
   "mn4:2.8": "“પણ હે મિત્ર ગૌતમ, ગાઢ વનમાં દૂર રહેવાની જગ્યાઓ કઠણ હોય છે, એકાંતવાસ જાળવવો મુશ્કેલ હોય છે, એકાંતવાસમાં આનંદ લેવો મુશ્કેલ હોય છે,",
-  "mn4:2.9": "મને લાગે છે કે સમાધિ ના પ્રાપ્ત કરી હોય તેવા એકલા રહેનાર ભિક્ષુઓના મનને વન લૂટી લે છે”."
+  "mn4:2.9": "મને લાગે છે કે સમાધિ ના પ્રાપ્ત કરી હોય તેવા એકલા રહેનાર ભિક્ષુઓના મનને વન લૂટી લે છે”.",
+  "mn4:2.10": "“એવું જ છે, બ્રાહ્મણ, એવું જ છે, બ્રાહ્મણ!"
 }
