--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -13,5 +13,6 @@
   "mn4:2.8": "“પણ હે મિત્ર ગૌતમ, ગાઢ વનમાં દૂર રહેવાની જગ્યાઓ કઠણ હોય છે, એકાંતવાસ જાળવવો મુશ્કેલ હોય છે, એકાંતવાસમાં આનંદ લેવો મુશ્કેલ હોય છે,",
   "mn4:2.9": "મને લાગે છે કે સમાધિ ના પ્રાપ્ત કરી હોય તેવા એકલા રહેનાર ભિક્ષુઓના મનને વન લૂટી લે છે”.",
   "mn4:2.10": "“એવું જ છે, બ્રાહ્મણ, એવું જ છે, બ્રાહ્મણ!",
-  "mn4:2.11": "ગાઢ વનમાં દૂર રહેવાની જગ્યાઓ કઠણ હોય છે, એકાંતવાસ જાળવવો મુશ્કેલ હોય છે, એકાંતવાસમાં આનંદ લેવો મુશ્કેલ હોય છે,"
+  "mn4:2.11": "ગાઢ વનમાં દૂર રહેવાની જગ્યાઓ કઠણ હોય છે, એકાંતવાસ જાળવવો મુશ્કેલ હોય છે, એકાંતવાસમાં આનંદ લેવો મુશ્કેલ હોય છે,",
+  "mn4:2.12": "મને લાગે છે કે સમાધિ ના પ્રાપ્ત કરી હોય તેવા એકલા રહેનાર ભિક્ષુઓના મનને વન લૂટી લે છે."
 }
