--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn22.79:0.3": "Jucken ",
   "sn22.79:1.1": "In Sāvatthī. ",
   "sn22.79:1.2": "„Mönche und Nonnen, alle Asketen und Brahmanen, die sich an viele Arten früherer Leben erinnern, sie alle erinnern sich an die fünf mit Ergreifen verbundenen Aggregate, oder an eines von ihnen. ",
-  "sn22.79:1.3": "Welche fünf? "
+  "sn22.79:1.3": "Welche fünf? ",
+  "sn22.79:1.4": "‚Ich hatte solche Form in der Vergangenheit.‘ "
 }
