--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -7,5 +7,5 @@
   "sn22.79:1.3": "Welche fünf? ",
   "sn22.79:1.4": "‚Ich hatte solche Form in der Vergangenheit.‘ ",
   "sn22.79:1.5": "Wenn man sich so erinnert, erinnert man sich bloß an Form. ",
-  "sn22.79:1.6": "‚Ich hatte solches Gefühl in der Vergangenheit.‘ "
+  "sn22.79:1.6": "‚Ich hatte solches Gefühl … "
 }
