Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.79:1.4": "‚Ich hatte solche Form in der Vergangenheit.‘ ",
   "sn22.79:1.5": "Wenn man sich so erinnert, erinnert man sich bloß an Form. ",
   "sn22.79:1.6": "‚Ich hatte solches Gefühl … ",
-  "sn22.79:1.8": "solche Wahrnehmung … "
+  "sn22.79:1.8": "solche Wahrnehmung … ",
+  "sn22.79:1.9": "solche Entscheidungen … "
 }
