--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn22.79:1.6": "‚Ich hatte solches Gefühl … ",
   "sn22.79:1.8": "Ich hatte solche Wahrnehmung … ",
   "sn22.79:1.9": "Ich hatte solche Entscheidungen … ",
-  "sn22.79:1.10": "Ich hatte solches Bewusstsein in der Vergangenheit.‘ "
+  "sn22.79:1.10": "Ich hatte solches Bewusstsein in der Vergangenheit.‘ ",
+  "sn22.79:1.11": "Wenn man sich so erinnert, erinnert man sich bloß an Bewusstsein. "
 }
