--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "sn22.79:1.2": "„Mönche und Nonnen, alle Asketen und Brahmanen, die sich an viele Arten früherer Leben erinnern, sie alle erinnern sich an die fünf mit Ergreifen verbundenen Aggregate, oder an eines von ihnen. ",
   "sn22.79:1.3": "Welche fünf? ",
   "sn22.79:1.4": "‚Ich hatte solche Form in der Vergangenheit.‘ ",
-  "sn22.79:1.5": "Wenn man sich so erinnert, erinnert man sich bloß an Form. ",
+  "sn22.79:1.5": "Wenn man sich so erinnert, erinnert man sich nur an Form. ",
   "sn22.79:1.6": "‚Ich hatte solches Gefühl … ",
   "sn22.79:1.8": "Ich hatte solche Wahrnehmung … ",
   "sn22.79:1.9": "Ich hatte solche Entscheidungen … ",
