--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn22.79:1.9": "Ich hatte solche Entscheidungen … ",
   "sn22.79:1.10": "Ich hatte solches Bewusstsein in der Vergangenheit.‘ ",
   "sn22.79:1.11": "Wenn man sich so erinnert, erinnert man sich nur an Bewusstsein. ",
-  "sn22.79:2.1": "Und warum nennt man es Form? "
+  "sn22.79:2.1": "Und warum nennt man es Form? ",
+  "sn22.79:2.2": "Es ist verformt; darum nennt man es ‚Form‘. "
 }
