--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.79:1.11": "Wenn man sich so erinnert, erinnert man sich nur an Bewusstsein. ",
   "sn22.79:2.1": "Und warum nennt man es Form? ",
   "sn22.79:2.2": "Es ist verformt; darum nennt man es ‚Form‘. ",
-  "sn22.79:2.3": "Wodurch ist es verformt? "
+  "sn22.79:2.3": "Wodurch ist es verformt? ",
+  "sn22.79:2.4": "Es ist verformt durch Kälte, Hitze, Hunger, Durst und durch die Berührung von Fliegen, Stechmücken, Wind, Sonne und Kriechtieren. "
 }
