Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn22.79:2.2": "Es ist verformt; darum nennt man es ‚Form‘. ",
   "sn22.79:2.3": "Wodurch ist es verformt? ",
   "sn22.79:2.4": "Es ist verformt durch Kälte, Hitze, Hunger, Durst und durch die Berührung von Fliegen, Stechmücken, Wind, Sonne und Kriechtieren. ",
-  "sn22.79:2.5": "Es ist verformt; darum nennt man es ‚Form‘. "
+  "sn22.79:2.5": "Es ist verformt; darum nennt man es ‚Form‘. ",
+  "sn22.79:3.1": "Und warum nennt man es Gefühl? "
 }
