--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn22.79:3.1": "Und warum nennt man es Gefühl? ",
   "sn22.79:3.2": "Es fühlt; darum nennt man es ‚Gefühl‘. ",
   "sn22.79:3.3": "Und was fühlt es? ",
-  "sn22.79:3.4": "Es fühlt Angenehmes, Schmerzhaftes und Neutrales. "
+  "sn22.79:3.4": "Es fühlt Angenehmes, Schmerzhaftes und Neutrales. ",
+  "sn22.79:3.5": "Es fühlt; darum nennt man es ‚Gefühl‘. "
 }
