--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn22.79:3.4": "Es fühlt Angenehmes, Schmerzhaftes und Neutrales. ",
   "sn22.79:3.5": "Es fühlt; darum nennt man es ‚Gefühl‘. ",
   "sn22.79:4.1": "Und warum nennt man es Wahrnehmung? ",
-  "sn22.79:4.2": "Es nimmt wahr; darum nennt man es ‚Wahrnehmung‘. "
+  "sn22.79:4.2": "Es nimmt wahr; darum nennt man es ‚Wahrnehmung‘. ",
+  "sn22.79:4.3": "Und was nimmt es wahr? "
 }
