Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn22.79:4.1": "Und warum nennt man es Wahrnehmung? ",
   "sn22.79:4.2": "Es nimmt wahr; darum nennt man es ‚Wahrnehmung‘. ",
   "sn22.79:4.3": "Und was nimmt es wahr? ",
-  "sn22.79:4.4": "Es nimmt Blau, Gelb, Rot und Weiß wahr. "
+  "sn22.79:4.4": "Es nimmt Blau, Gelb, Rot und Weiß wahr. ",
+  "sn22.79:4.5": "Es nimmt wahr; darum nennt man es ‚Wahrnehmung‘. "
 }
