--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn22.79:4.3": "Und was nimmt es wahr? ",
   "sn22.79:4.4": "Es nimmt Blau, Gelb, Rot und Weiß wahr. ",
   "sn22.79:4.5": "Es nimmt wahr; darum nennt man es ‚Wahrnehmung‘. ",
-  "sn22.79:5.1": "Und warum nennt man sie Entscheidungen? "
+  "sn22.79:5.1": "Und warum nennt man sie Entscheidungen? ",
+  "sn22.79:5.2": "Entscheidungen erzeugen bedingte Erscheinungen; darum nennt man sie ‚Entscheidungen‘. "
 }
