--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn22.79:5.2": "Entscheidungen erzeugen bedingte Erscheinungen; darum nennt man sie ‚Entscheidungen‘. ",
   "sn22.79:5.3": "Und was sind die bedingten Erscheinungen, die sie erzeugen? ",
   "sn22.79:5.4": "Form ist eine bedingte Erscheinung; Entscheidungen machen sie zu Form. Gefühl ist eine bedingte Erscheinung; Entscheidungen machen es zu Gefühl. Wahrnehmung ist eine bedingte Erscheinung; Entscheidungen machen sie zu Wahrnehmung. Entscheidungen sind eine bedingte Erscheinung; Entscheidungen machen sie zu Entscheidungen. Bewusstsein ist eine bedingte Erscheinung; Entscheidungen machen es zu Bewusstsein. ",
-  "sn22.79:5.5": "Entscheidungen erzeugen bedingte Erscheinungen; darum nennt man sie ‚Entscheidungen‘. "
+  "sn22.79:5.5": "Entscheidungen erzeugen bedingte Erscheinungen; darum nennt man sie ‚Entscheidungen‘. ",
+  "sn22.79:6.1": "Und warum nennt man es Bewusstsein? "
 }
