Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "sn22.79:5.5": "Entscheidungen erzeugen bedingte Erscheinungen; darum nennt man sie ‚Entscheidungen‘. ",
   "sn22.79:6.1": "Und warum nennt man es Bewusstsein? ",
   "sn22.79:6.2": "Es weiß; darum nennt man es ‚Bewusstsein‘. ",
-  "sn22.79:6.3": "Und was weiß es? "
+  "sn22.79:6.3": "Und was weiß es? ",
+  "sn22.79:6.4": "Es weiß um sauer, bitter, pikant, süß, scharf, mild, salzig und fad."
 }
