Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "sn22.79:6.2": "Es weiß; darum nennt man es ‚Bewusstsein‘. ",
   "sn22.79:6.3": "Und was weiß es? ",
   "sn22.79:6.4": "Es weiß um sauer, bitter, pikant, süß, scharf, mild, salzig und fad.",
-  "sn22.79:6.5": "Es weiß; darum nennt man es ‚Bewusstsein‘. "
+  "sn22.79:6.5": "Es weiß; darum nennt man es ‚Bewusstsein‘. ",
+  "sn22.79:7.1": "Ein edler Schüler denkt darüber nach: "
 }
