--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -39,5 +39,6 @@
   "sn22.79:6.5": "Es weiß; darum nennt man es ‚Bewusstsein‘. ",
   "sn22.79:7.1": "Ein edler Schüler denkt darüber nach: ",
   "sn22.79:7.2": "‚Gegenwärtig werde ich von Form verzehrt. ",
-  "sn22.79:7.3": "Auch in der Vergangenheit wurde ich von Form verzehrt, geradeso wie jetzt. "
+  "sn22.79:7.3": "Auch in der Vergangenheit wurde ich von Form verzehrt, geradeso wie jetzt. ",
+  "sn22.79:7.4": "Wenn ich mich darauf freuen würde, in Zukunft an Form Vergnügen zu finden, würde ich auch in der Zukunft von Form verzehrt, geradeso wie jetzt.‘ "
 }
