Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -44,5 +44,5 @@
   "sn22.79:7.5": "Wenn er so nachdenkt, sorgt er sich nicht um vergangene Form, ",
   "sn22.79:7.6": "freut sich nicht darauf, zukünftige Form zu genießen, ",
   "sn22.79:7.7": "und übt für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf gegenwärtige Form. ",
-  "sn22.79:8.1": "‚Gegenwärtig werde ich von Gefühl verzehrt … "
+  "sn22.79:8.1": "‚Gegenwärtig werde ich von Gefühl verzehrt …‘ … "
 }
