Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -17,5 +17,6 @@
   "mn4:2.12": "મને લાગે છે કે સમાધિ ના પ્રાપ્ત કરી હોય તેવા એકલા રહેનાર ભિક્ષુઓના મનને વન લૂટી લે છે.",
   "mn4:3.1": "બ્રાહ્મણ, પહેલા જ્યારે હું સંબુદ્ધ ન હતો, માત્ર બોધિસત્વ હતો, ત્યારે મને પણ એવું લાગતું હતું:",
   "mn4:3.2": "‘ગાઢ વનમાં દૂર રહેવાની જગ્યાઓ કઠણ હોય છે, એકાંતવાસ જાળવવો મુશ્કેલ હોય છે, એકાંતવાસમાં આનંદ લેવો મુશ્કેલ હોય છે,",
-  "mn4:3.3": "મને લાગે છે કે સમાધિ ના પ્રાપ્ત કરી હોય તેવા એકલા રહેનાર ભિક્ષુઓના મનને વન લૂટી લે છે’."
+  "mn4:3.3": "મને લાગે છે કે સમાધિ ના પ્રાપ્ત કરી હોય તેવા એકલા રહેનાર ભિક્ષુઓના મનને વન લૂટી લે છે’.",
+  "mn4:4.1": "પછી મને "
 }
