Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -46,5 +46,6 @@
   "sn22.79:7.7": "und übt für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf gegenwärtige Form. ",
   "sn22.79:8.1": "‚Gegenwärtig werde ich von Gefühl verzehrt …‘ … ",
   "sn22.79:9.1": "‚Gegenwärtig werde ich von Wahrnehmung verzehrt …‘ … ",
-  "sn22.79:9.2": "‚Gegenwärtig werde ich von Entscheidungen verzehrt …‘ … "
+  "sn22.79:9.2": "‚Gegenwärtig werde ich von Entscheidungen verzehrt …‘ … ",
+  "sn22.79:10.1": "‚Gegenwärtig werde ich von Bewusstsein verzehrt. "
 }
