Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn22.79:8.1": "‚Gegenwärtig werde ich von Gefühl verzehrt …‘ … ",
   "sn22.79:9.1": "‚Gegenwärtig werde ich von Wahrnehmung verzehrt …‘ … ",
   "sn22.79:9.2": "‚Gegenwärtig werde ich von Entscheidungen verzehrt …‘ … ",
-  "sn22.79:10.1": "‚Gegenwärtig werde ich von Bewusstsein verzehrt. "
+  "sn22.79:10.1": "‚Gegenwärtig werde ich von Bewusstsein verzehrt. ",
+  "sn22.79:10.2": "Auch in der Vergangenheit wurde ich von Bewusstsein verzehrt, geradeso wie jetzt. "
 }
