--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -52,5 +52,6 @@
   "sn22.79:10.3": "Wenn ich mich darauf freuen würde, in Zukunft an Bewusstsein Vergnügen zu finden, würde ich auch in der Zukunft von Bewusstsein verzehrt, geradeso wie jetzt.‘ ",
   "sn22.79:10.5": "Wenn er so nachdenkt, sorgt er sich nicht um vergangenes Bewusstsein, ",
   "sn22.79:10.6": "freut sich nicht darauf, zukünftiges Bewusstsein zu genießen, ",
-  "sn22.79:10.7": "und übt für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf gegenwärtiges Bewusstsein. "
+  "sn22.79:10.7": "und übt für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf gegenwärtiges Bewusstsein. ",
+  "sn22.79:11.1": "Was denkt ihr, Mönche und Nonnen? "
 }
