--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -54,5 +54,6 @@
   "sn22.79:10.6": "freut sich nicht darauf, zukünftiges Bewusstsein zu genießen, ",
   "sn22.79:10.7": "und übt für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf gegenwärtiges Bewusstsein. ",
   "sn22.79:11.1": "Was denkt ihr, Mönche und Nonnen? ",
-  "sn22.79:11.2": "Ist Form beständig oder unbeständig?“ "
+  "sn22.79:11.2": "Ist Form beständig oder unbeständig?“ ",
+  "sn22.79:11.3": "„Unbeständig, Herr.“ "
 }
