--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -56,5 +56,6 @@
   "sn22.79:11.1": "Was denkt ihr, Mönche und Nonnen? ",
   "sn22.79:11.2": "Ist Form beständig oder unbeständig?“ ",
   "sn22.79:11.3": "„Unbeständig, Herr.“ ",
-  "sn22.79:11.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ "
+  "sn22.79:11.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ ",
+  "sn22.79:11.5": "„Leiden, Herr.“ "
 }
