Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -57,5 +57,6 @@
   "sn22.79:11.2": "Ist Form beständig oder unbeständig?“ ",
   "sn22.79:11.3": "„Unbeständig, Herr.“ ",
   "sn22.79:11.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ ",
-  "sn22.79:11.5": "„Leiden, Herr.“ "
+  "sn22.79:11.5": "„Leiden, Herr.“ ",
+  "sn22.79:11.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: "
 }
