--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "sn22.79:11.3": "„Unbeständig, Herr.“ ",
   "sn22.79:11.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ ",
   "sn22.79:11.5": "„Leiden, Herr.“ ",
-  "sn22.79:11.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: "
+  "sn22.79:11.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: ",
+  "sn22.79:11.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ "
 }
