--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -61,7 +61,7 @@
   "sn22.79:11.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: ",
   "sn22.79:11.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn22.79:11.8": "„Nein, Herr.“ ",
-  "sn22.79:11.9": "„Ist Gefühl …“ … ",
+  "sn22.79:11.9": "„Ist Gefühl … ",
   "sn22.79:11.10": "„Ist Wahrnehmung …“ … ",
   "sn22.79:11.11": "„Sind Entscheidungen …“ … "
 }
