--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -62,6 +62,6 @@
   "sn22.79:11.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn22.79:11.8": "„Nein, Herr.“ ",
   "sn22.79:11.9": "„Ist Gefühl … ",
-  "sn22.79:11.10": "„Ist Wahrnehmung …“ … ",
+  "sn22.79:11.10": "Wahrnehmung … ",
   "sn22.79:11.11": "„Sind Entscheidungen …“ … "
 }
