--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -63,5 +63,6 @@
   "sn22.79:11.8": "„Nein, Herr.“ ",
   "sn22.79:11.9": "„Ist Gefühl … ",
   "sn22.79:11.10": "Wahrnehmung … ",
-  "sn22.79:11.11": "Entscheidungen … "
+  "sn22.79:11.11": "Entscheidungen … ",
+  "sn22.79:11.12": "Ist Bewusstsein beständig oder unbeständig?“ "
 }
