Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -66,5 +66,6 @@
   "sn22.79:11.11": "Entscheidungen … ",
   "sn22.79:11.12": "Ist Bewusstsein beständig oder unbeständig?“ ",
   "sn22.79:11.13": "„Unbeständig, Herr.“ ",
-  "sn22.79:11.14": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ "
+  "sn22.79:11.14": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
+  "sn22.79:11.15": "„Leiden, Herr.“ "
 }
