Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -68,5 +68,6 @@
   "sn22.79:11.13": "„Unbeständig, Herr.“ ",
   "sn22.79:11.14": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
   "sn22.79:11.15": "„Leiden, Herr.“ ",
-  "sn22.79:11.16": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: "
+  "sn22.79:11.16": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
+  "sn22.79:11.17": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ "
 }
