Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -79,5 +79,6 @@
   "sn22.79:12.1": "Dann nennt man ihn einen edlen Schüler, der der Dinge loswird, nicht Dinge anhäuft; ",
   "sn22.79:12.2": "der Dinge aufgibt, nicht Dinge ergreift; ",
   "sn22.79:12.3": "der Dinge wegwirft, nicht Dinge aufbewahrt; ",
-  "sn22.79:12.4": "der Dinge zerteilt, nicht Dinge zu Wolken zusammenballt. "
+  "sn22.79:12.4": "der Dinge zerteilt, nicht Dinge zu Wolken zusammenballt. ",
+  "sn22.79:12.5": "Und welche Dinge wird er los und häuft sie nicht an? "
 }
