Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -82,5 +82,6 @@
   "sn22.79:12.4": "der Dinge zerteilt, nicht Dinge zu Wolken zusammenballt. ",
   "sn22.79:12.5": "Und welche Dinge wird er los und häuft sie nicht an? ",
   "sn22.79:12.6": "Form wird er los und häuft sie nicht an. ",
-  "sn22.79:12.7": "Gefühl … "
+  "sn22.79:12.7": "Gefühl … ",
+  "sn22.79:12.8": "Wahrnehmung … "
 }
