Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -85,5 +85,6 @@
   "sn22.79:12.7": "Gefühl … ",
   "sn22.79:12.8": "Wahrnehmung … ",
   "sn22.79:12.9": "Entscheidungen … ",
-  "sn22.79:12.10": "Bewusstsein wird er los und häuft es nicht an. "
+  "sn22.79:12.10": "Bewusstsein wird er los und häuft es nicht an. ",
+  "sn22.79:12.11": "Und welche Dinge gibt er auf und ergreift sie nicht? "
 }
