Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -88,5 +88,6 @@
   "sn22.79:12.10": "Bewusstsein wird er los und häuft es nicht an. ",
   "sn22.79:12.11": "Und welche Dinge gibt er auf und ergreift sie nicht? ",
   "sn22.79:12.12": "Form gibt er auf und ergreift sie nicht. ",
-  "sn22.79:12.13": "Gefühl … "
+  "sn22.79:12.13": "Gefühl … ",
+  "sn22.79:12.14": "Wahrnehmung … "
 }
