Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -90,5 +90,6 @@
   "sn22.79:12.12": "Form gibt er auf und ergreift sie nicht. ",
   "sn22.79:12.13": "Gefühl … ",
   "sn22.79:12.14": "Wahrnehmung … ",
-  "sn22.79:12.15": "Entscheidungen … "
+  "sn22.79:12.15": "Entscheidungen … ",
+  "sn22.79:12.16": "Bewusstsein gibt er auf und ergreift es nicht. "
 }
