Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -94,5 +94,6 @@
   "sn22.79:12.16": "Bewusstsein gibt er auf und ergreift es nicht. ",
   "sn22.79:12.17": "Und welche Dinge wirft er weg und bewahrt sie nicht auf? ",
   "sn22.79:12.18": "Form wirft er weg und bewahrt sie nicht auf. ",
-  "sn22.79:12.19": "Gefühl … "
+  "sn22.79:12.19": "Gefühl … ",
+  "sn22.79:12.20": "Wahrnehmung … "
 }
