Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -101,5 +101,6 @@
   "sn22.79:12.23": "Und welche Dinge zerteilt er und ballt sie nicht zu Wolken zusamen? ",
   "sn22.79:12.24": "Form zerteilt er und ballt sie nicht zu Wolken zusamen. ",
   "sn22.79:12.25": "Gefühl … ",
-  "sn22.79:12.26": "Wahrnehmung … "
+  "sn22.79:12.26": "Wahrnehmung … ",
+  "sn22.79:12.27": "Entscheidungen … "
 }
