Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -119,5 +119,6 @@
   "sn22.79:14.10": "Gefühl … ",
   "sn22.79:14.11": "Wahrnehmung … ",
   "sn22.79:14.12": "Entscheidungen … ",
-  "sn22.79:14.13": "Bewusstsein gibt er weder auf noch ergreift er es, sondern bleibt stetig, nachdem er es aufgegeben hat. "
+  "sn22.79:14.13": "Bewusstsein gibt er weder auf noch ergreift er es, sondern bleibt stetig, nachdem er es aufgegeben hat. ",
+  "sn22.79:14.14": "Und welche Dinge wirft er weder weg noch bewahrt sie auf, sondern bleibt stetig, nachdem er sie weggeworfen hat? "
 }
