Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -126,5 +126,6 @@
   "sn22.79:14.17": "Wahrnehmung … ",
   "sn22.79:14.18": "Entscheidungen … ",
   "sn22.79:14.19": "Bewusstsein wirft er weder weg noch bewahrt er es auf, sondern bleibt stetig, nachdem er es weggeworfen hat. ",
-  "sn22.79:14.20": "Und welche Dinge zerteilt er weder noch ballt sie zu Wolken zusammen, sondern bleibt stetig, nachdem er sie zerteilt hat? "
+  "sn22.79:14.20": "Und welche Dinge zerteilt er weder noch ballt sie zu Wolken zusammen, sondern bleibt stetig, nachdem er sie zerteilt hat? ",
+  "sn22.79:14.21": "Form zerteilt er weder noch ballt er sie zu Wolken zusammen, sondern bleibt stetig, nachdem er sie zerteilt hat. "
 }
